# Reading-from-Delphes

./: PlotFromRoot.py  README.md  example.yaml  setup.cfg
analysis/: Analysis.py  ExampleAnalysis.py  Sample.py  config.py
