[metadata]
name = Reading-from-Delphes
version = 0.0.1
url = https://github.com/elskorda/kkroot
description = Simple script to make plots using the ExRootAnalysis output from Delphes
long_description = file: README.md
long_description_content_type = text/markdown
author = Karol Krizka
author_email = kkrizka@gmail.com
classifiers =
	    Programming Language :: Python :: 3
	    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	    Operating System :: OS Independent

[options]
packages =
	 kkconfig
	 kkroot
